kubernetes/apps/flux-system/addons/app/webhooks/github/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: webhook-receiver
spec:
  parentRefs:
    - name: kong
      namespace: network
  hostnames:
    - flux-webhook.janpuc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook
      backendRefs:
        - name: webhook-receiver
          port: 80
